2005-02-13  Sven Neumann  <sven@gimp.org>

	* app/base/base.c
	* app/base/tile-swap.[ch]: moved some code from base_init() into
	tile_swap_init().

	* app/base/pixel-processor.[ch]: prepared for porting to GThreadPool.

	* app/config/gimpbaseconfig.c: changed "num-processors" option to
	require a confirmation before being changed.

2005-02-13  Sven Neumann  <sven@gimp.org>

	* configure.in: check for gthread-2.0 unless the --disable-mp
	option is given.

	* app/app_procs.c (app_libs_init): call g_thread_init().

	* app/base/pixel-processor.c: ported to GThread.

	* app/Makefile.am
	* app/*/Makefile.am: use @GTHREAD_CFLAGS@.

2005-02-13  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpprogress.c (gimp_progress_install): fixed typos in
	comment.

	* libgimp/gimpprogress.[ch]: gimp_progress_set_text() has boolean
	return value.

2005-02-13  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c: use context specific labels for the
	action buttons in the rotate confirmation dialog.

2005-02-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprogress.c (gimp_progress_start): accept an empty
	string.

	* app/plug-in/plug-in-progress.c: if NULL is passed as message to
	plug_in_progress_start(), set an empty string on the progress.

	* tools/pdbgen/pdb/progress.pdb:
	* libgimp/gimpprogress.[ch]: wrap the new gimp_progress_set_text()
	PDP function with a function that accepts printf-like arguments.

	* libgimp/gimpprogress_pdb.[ch]: regenerated.

	* lots of plug-ins, most of them file plug-ins:
	use gimp_progress_init(NULL) followed by gimp_progress_set_text()
	to initialize the progress using the new API instead of constructing
	a temporary string.

2005-02-12  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/file-save-dialog.c (file_save_dialog_response): use
	gtk_file_chooser_set_uri() to check if a file exists. Seems to
	work reliably even for remote files and fixes the issue i
	mentioned below.

2005-02-12  Sven Neumann  <sven@gimp.org>
